# context_cue

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/domain/: mod.rs  profile_document.rs
apps/desktop/src-tauri/src/infrastructure/: mock_event_runner.rs  mod.rs  persistence.rs  window_manager.rs
apps/desktop/src-tauri/src/repository/: profile_repository.rs
apps/desktop/src-tauri/src/usecase/: mod.rs  profile_usecase.rs  session_usecase.rs
apps/desktop/src/lib/schemas/: app-state.ts  workspace-state.ts
apps/desktop/src/lib/state/: app-store.ts  persist-storage.ts  workspace-store.ts
apps/desktop/src/lib/tauri/: events.ts  (+1 more)
apps/desktop/src/styles/: globals.css
apps/desktop/test/: app.test.tsx
crates/context-cue-contracts/: Cargo.toml
crates/context-cue-contracts/src/: lib.rs
crates/context-cue-core/: Cargo.toml
crates/context-cue-core/src/: cues.rs  detection.rs  lib.rs  profile_search.rs
docs/: architecture.md  implementation-plan.md  release.md  requirements.md
profiles/sample/: experiences.md  meetings.md  projects.md  todos.md  values.md
(+22 files in other folders)
