[package]
name = "how-to-talk-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "how_to_talk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
context-cue-contracts = { path = "../../../crates/context-cue-contracts" }
context-cue-core = { path = "../../../crates/context-cue-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }

